crates/ink/tests/ui/abi/sol/fail/derive-sol-encode-decode-complex-enum.stderr
error: can only derive `SolDecode` for Rust `enum` items with only unit-only or field-less variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-complex-enum.rs:7:1
   |
7  | / enum EnumWithUnnamedFields {
8  | |     Unit,
9  | |     UnnamedFields(bool, u8, String),
10 | | }
   | |_^

error: can only derive `SolEncode` for Rust `enum` items with only unit-only or field-less variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-complex-enum.rs:7:1
   |
7  | / enum EnumWithUnnamedFields {
8  | |     Unit,
9  | |     UnnamedFields(bool, u8, String),
10 | | }
   | |_^

error: can only derive `SolDecode` for Rust `enum` items with only unit-only or field-less variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-complex-enum.rs:13:1
   |
13 | / enum EnumWithNamedFields {
14 | |     Unit,
15 | |     NamedFields {
16 | |         status: bool,
...  |
19 | |     },
20 | | }
   | |_^

error: can only derive `SolEncode` for Rust `enum` items with only unit-only or field-less variants
  --> tests/ui/abi/sol/fail/derive-sol-encode-decode-complex-enum.rs:13:1
   |
13 | / enum EnumWithNamedFields {
14 | |     Unit,
15 | |     NamedFields {
16 | |         status: bool,
...  |
19 | |     },
20 | | }
   | |_^
